@@ -546,7 +546,7 @@ class ClientUpdate:
         respectFlavorAffinity = True
         # thew newTroves parameters are described below.
         newTroves = sorted(((x[0], x[2][0], x[2][1]), 
-                            True, {}, False, False, False, None, 
+                            True, {}, False, False, False, False, None, 
                             respectBranchAffinity, 
                             respectFlavorAffinity, True,
                             True, updateOnly) 
@@ -569,6 +569,8 @@ class ClientUpdate:
             # parentInstalled: True if the parent of this trove was installed.
             #                  Used to determine whether to install troves 
             #                  with weak references.
+            # parentReplacedWasPinned: True if this trove's parent would
+            #                          have replaced a trove that is pinned.
             # parentUpdated: True if the parent of this trove was installed.
             #                or updated.
             # primaryInstalled: True if the primary that led to this update
@@ -595,11 +597,11 @@ class ClientUpdate:
             #              description.
             # updateOnly:  If true, only update troves, don't install them
             #              fresh.
-
-            (newInfo, isPrimary, byDefaultDict, parentInstalled, parentUpdated,
-             primaryInstalled, branchHint, respectBranchAffinity, 
-             respectFlavorAffinity,
-             installRedirects, followLocalChanges, updateOnly) = newTroves.pop(0)
+            (newInfo, isPrimary, byDefaultDict, parentInstalled,
+             parentReplacedWasPinned, parentUpdated, primaryInstalled,
+             branchHint, respectBranchAffinity, respectFlavorAffinity,
+             installRedirects, followLocalChanges,
+             updateOnly) = newTroves.pop(0)
 
             byDefault = isPrimary or byDefaultDict[newInfo]
 
@@ -620,7 +622,7 @@ followLocalChanges: %s
             replaced = (None, None)
             recurseThis = True
             childrenFollowLocalChanges = alwaysFollowLocalChanges
-
+            pinned = False
             while True:
                 # this loop should only be called once - it's basically a 
                 # way to create a quick GOTO structure, without needing 
@@ -702,9 +704,10 @@ followLocalChanges: %s
                         # that trove instead.  If not, we just install this 
                         # trove as a fresh update. 
                         log.debug('replaced trove is not installed')
-
-                        if not (parentInstalled
-                                or followLocalChanges or installMissingRefs):
+                        if (not ((parentInstalled
+                                 and not parentReplacedWasPinned)
+                                 or followLocalChanges
+                                 or installMissingRefs)):
                             # followLocalChanges states that, even though
                             # the given trove is not a primary, we still want
                             # replace a localUpdate if available instead of 
@@ -717,7 +720,9 @@ followLocalChanges: %s
                             log.debug('SKIP: not following local changes')
                             break
 
-                        freshInstallOkay = (isPrimary or parentInstalled 
+                        freshInstallOkay = (isPrimary or
+                                            (parentInstalled
+                                             and not parentReplacedWasPinned)
                                             or installMissingRefs)
                         # we always want to install the trove even if there's
                         # no local update to match to if it's a primary, or
@@ -1013,7 +1018,7 @@ followLocalChanges: %s
                     byDefaultDict.setdefault(info, childByDefault)
 
                 newTroves.append((info, False,
-                                  byDefaultDict, jobInstall, jobAdded,
+                                  byDefaultDict, jobInstall, pinned, jobAdded,
                                   primaryInstalled,
                                   branchHint, respectBranchAffinity,
                                   respectFlavorAffinity, installRedirects,
